{
    "name": "Controls",
    "maps": [
        {
            "name": "BaseMap",
            "id": "7e1f8d3e-1b75-4faa-9d8c-df532f36730a",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "7ef09526-bd67-41c2-b031-52d5c7c7fdc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "1207138e-d686-472e-93f3-f7bada049f85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PanCamera",
                    "type": "Button",
                    "id": "7125cf25-e3db-4b0c-8dc4-c00da4f580d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "ba5e24f0-db46-4a3a-9f5e-9ae729df8112",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "2a889c5f-dbbb-4e4b-a825-56ddcf936367",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "b23db939-4023-4e8c-a5bb-da9ec9261993",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "279c3ac4-975f-4db8-8cb8-24e7f2aaade3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "8a1ad049-8e76-4be5-906b-bf8d7a802ebd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DragCamera",
                    "type": "Value",
                    "id": "cc74d6f1-bd44-4be9-aa4d-02da8eb9a8da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7760efb5-c09a-463b-9214-0a2d7365972c",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "921ce026-c19c-4cb7-9b5a-530a7998fe0d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "e7af8b36-b1ed-451a-932e-360f341dc1f9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "71054c00-04cd-4777-b5a5-382994caf6f7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d47db853-4ed8-49f2-8552-6737c9a968bb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "2ead7f56-ed26-489f-aefd-517e3733672e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "307b32bf-59c1-4467-af16-840a0ebf358c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e878ae9f-0a57-4aa5-8d65-4a4fd9237c7b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aa7ee95c-59eb-4a70-ada4-0dfc9e239a5c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be17bf86-1d29-4f44-a059-7e9043911b3a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "252a57a0-131e-4ce1-bf81-3810089864be",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2abe795c-3640-4d79-b2da-64fa64696761",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "234672d6-5026-4873-b8b0-acab00c302b8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "34638db2-9135-4d90-b335-65be890ed145",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "1ed78b37-ae72-4b1d-acfb-d4f45637f57f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "90ea7f95-226c-43fa-adad-df7cdb03c0ce",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}